convert png to pdf, fix refs to img & table & formula

--- a/nkthesis.bib
+++ b/nkthesis.bib
@@ -1,108 +1,376 @@
-
-@article{Nadkarni-1992,
-	author = {M. A. Nadkarni and C. K. K. Nair and V. N. Pandey and A. Others},
-	title = {Characterzation of alpha-galactosidase from corynebacterium murisepticum and mechanism of its induction},
-	type = {J},
-	journal = {J Gen App Microbiol},
-	year = {1992},
-	volume = {38},
-	pages = {223-234},
+@article{吕琳媛2010复杂网络链路预测,
+  title={复杂网络链路预测},
+  author={吕琳媛},
+  journal={电子科技大学学报},
+  volume={39},
+  number={5},
+  pages={651--661},
+  year={2010}
 }
 
-@article{ChenCheChen2001,
-	author = {陈建军 and 车建文 and 陈勇},
-	title = {具有频率和振型概率约束的工程结构动力优化设计},
-	type = {J},
-	journal = {计算力学学报},
-	year = {2001},
-	volume = {18},
-	number = {1},
-	pages = {74-80},
-	userf = {zh},
+@article{李淑玲2012基于相似性的链接预测方法研究,
+  title={基于相似性的链接预测方法研究},
+  author={李淑玲},
+  journal={硕士论文, 哈尔滨工程大学, 哈尔滨},
+  year={2012}
 }
 
-
-@article{Hua-Wang-1973,
-	author = {华罗庚 and 王元},
-	title = {论一致分布与近似分析：数论方法(I)},
-	type = {J},
-	journal = {中国科学},
-	year = {1973},
-	number = {4},
-	pages = {339-357},
-	userf = {zh},
+@article{wang2017novel,
+  title={A novel collective matrix factorization model for recommendation with fine-grained social trust prediction},
+  author={Wang, Jinkun and Zhang, Shasha and Liu, Xiao and Jiang, Yuanchun and Zhang, Min},
+  journal={Concurrency and Computation: Practice and Experience},
+  volume={29},
+  number={19},
+  pages={e4233},
+  year={2017},
+  publisher={Wiley Online Library}
 }
 
-
-@book{ZhuKeZhen,
-	author = {竺可桢},
-	title = {物候学},
-	type = {M},
-	location = {北京},
-	publisher = {科学出版社},
-	year = {1973},
-	userf = {zh},
+@article{adamic2003friends,
+  title={Friends and neighbors on the web},
+  author={Adamic, Lada A and Adar, Eytan},
+  journal={Social networks},
+  volume={25},
+  number={3},
+  pages={211--230},
+  year={2003},
+  publisher={Elsevier}
 }
 
-@book{Huo,
-	author = {霍夫斯塔主编},
-	title = {禽病学：下册．第7版},
-	translator = {胡祥壁},
-	type = {M},
-	location = {北京},
-	publisher = {农业出版社},
-	year = {1981},
-	pages = {798-799},
-	userf = {zh},
+@inproceedings{fokoue2016predicting,
+  title={Predicting drug-drug interactions through similarity-based link prediction over web data},
+  author={Fokoue, Achille and Hassanzadeh, Oktie and Sadoghi, Mohammad and Zhang, Ping},
+  booktitle={Proceedings of the 25th International Conference Companion on World Wide Web},
+  pages={175--178},
+  year={2016},
+  organization={International World Wide Web Conferences Steering Committee}
 }
 
-@patent{JiangXiZhou,
-	author = {姜锡洲},
-	title = {一种温热外敷药制备方案},
-	type = {P},
-	location = {中国},
-	number = {88105607.3},
-	date = {1989-07-26},
-	userf = {zh},
+@article{huang2013systematic,
+  title={Systematic prediction of pharmacodynamic drug-drug interactions through protein-protein-interaction network},
+  author={Huang, Jialiang and Niu, Chaoqun and Green, Christopher D and Yang, Lun and Mei, Hongkang and Han, Jing-Dong J},
+  journal={PLoS computational biology},
+  volume={9},
+  number={3},
+  pages={e1002998},
+  year={2013},
+  publisher={Public Library of Science}
 }
 
 
-@book{Timoshenko,
-	author = {S. P. Timoshenko},
-	title = {Theory of plate and shells．2nd ed.},
-	type = {M},
-	location = {New York},
-	publisher = {McGraw-Hil1},
-	year = {1959},
-    pages = {17-36},
+@article{juurlink2003drug,
+  title={Drug-drug interactions among elderly patients hospitalized for drug toxicity},
+  author={Juurlink, David N and Mamdani, Muhammad and Kopp, Alexander and Laupacis, Andreas and Redelmeier, Donald A},
+  journal={Jama},
+  volume={289},
+  number={13},
+  pages={1652--1658},
+  year={2003},
+  publisher={American Medical Association}
 }
 
-@incollection{Zhang-Wang,
-	author = {张全福 and 王里青},
-	title = {“百家争鸣”与理工科学报编辑工作},
-	type = {M},
-	bookauthor = {郑福寿},
-	booktitle = {学报编辑论丛：第2集},
-	location = {南京},
-	publisher = {河海大学出版社},
-	year = {1991},
-	pages = {1-4},
-	userf = {zh},
+
+@article{zhang2018prioritizing,
+  title={Prioritizing disease genes with an improved dual label propagation framework},
+  author={Zhang, Yaogong and Liu, Jiahui and Liu, Xiaohu and Fan, Xin and Hong, Yuxiang and Wang, Yuan and Huang, YaLou and Xie, MaoQiang},
+  journal={BMC bioinformatics},
+  volume={19},
+  number={1},
+  pages={47},
+  year={2018},
+  publisher={BioMed Central}
 }
 
-@online{Ding,
-  addendum={丁光莹. 钢筋混凝土框架结构非线性反应分析的随机模拟分析: [博士学位论文].
-  上海：同济大学，2001},
-  userf = {zh},
+@article{vilar2012drug,
+  title={Drug—drug interaction through molecular structure similarity analysis},
+  author={Vilar, Santiago and Harpaz, Rave and Uriarte, Eugenio and Santana, Lourdes and Rabadan, Raul and Friedman, Carol},
+  journal={Journal of the American Medical Informatics Association},
+  volume={19},
+  number={6},
+  pages={1066--1074},
+  year={2012},
+  publisher={BMJ Group BMA House, Tavistock Square, London, WC1H 9JR}
 }
 
-@online{GB6447-86,
-  addendum={全国文献工作标准化技术委员会第六分委员会．GB 6447-86 文摘编写规则．北京：中国标准出版社，1986},
-  userf = {zh},
+@article{chen2014robust,
+  title={Robust subspace segmentation via low-rank representation},
+  author={Chen, Jinhui and Yang, Jian},
+  journal={IEEE transactions on cybernetics},
+  volume={44},
+  number={8},
+  pages={1432--1445},
+  year={2014},
+  publisher={IEEE}
 }
 
-@online{Example,
-  addendum={ Nadkarni M A, Nair C K K, Pandey V N, et al．
-  Characterzation of alpha-galactosidase from corynebacterium murisepticum and mechanism of its induction.
-   J Gen App Microbiol，1992，38：223 $\sim$ 234 },
+
+@inproceedings{scellato2011exploiting,
+  title={Exploiting place features in link prediction on location-based social networks},
+  author={Scellato, Salvatore and Noulas, Anastasios and Mascolo, Cecilia},
+  booktitle={Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1046--1054},
+  year={2011},
+  organization={ACM}
+}
+
+@article{elhamifar2013sparse,
+  title={Sparse subspace clustering: Algorithm, theory, and applications},
+  author={Elhamifar, Ehsan and Vidal, Rene},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={35},
+  number={11},
+  pages={2765--2781},
+  year={2013},
+  publisher={IEEE}
+}
+
+@article{xu2016link,
+  title={Link prediction based on path entropy},
+  author={Xu, Zhongqi and Pu, Cunlai and Yang, Jian},
+  journal={Physica A: Statistical Mechanics and its Applications},
+  volume={456},
+  pages={294--301},
+  year={2016},
+  publisher={Elsevier}
+}
+
+
+@inproceedings{singh2008relational,
+  title={Relational learning via collective matrix factorization},
+  author={Singh, Ajit P and Gordon, Geoffrey J},
+  booktitle={Proceedings of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={650--658},
+  year={2008},
+  organization={ACM}
+}
+
+@article{guimera2009missing,
+  title={Missing and spurious interactions and the reconstruction of complex networks},
+  author={Guimer{\`a}, Roger and Sales-Pardo, Marta},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={52},
+  pages={22073--22078},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@article{ezzat2017drug,
+  title={Drug-target interaction prediction with graph regularized matrix factorization},
+  author={Ezzat, Ali and Zhao, Peilin and Wu, Min and Li, Xiao-Li and Kwoh, Chee-Keong},
+  journal={IEEE/ACM Transactions on Computational Biology and Bioinformatics (TCBB)},
+  volume={14},
+  number={3},
+  pages={646--656},
+  year={2017},
+  publisher={IEEE Computer Society Press}
+}
+
+@article{yang2015evaluating,
+  title={Evaluating link prediction methods},
+  author={Yang, Yang and Lichtenwalter, Ryan N and Chawla, Nitesh V},
+  journal={Knowledge and Information Systems},
+  volume={45},
+  number={3},
+  pages={751--782},
+  year={2015},
+  publisher={Springer}
+}
+
+@inproceedings{scellato2011exploiting,
+  title={Exploiting place features in link prediction on location-based social networks},
+  author={Scellato, Salvatore and Noulas, Anastasios and Mascolo, Cecilia},
+  booktitle={Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1046--1054},
+  year={2011},
+  organization={ACM}
+}
+
+
+
+@article{cannistraci2013link,
+  title={From link-prediction in brain connectomes and protein interactomes to the local-community-paradigm in complex networks},
+  author={Cannistraci, Carlo Vittorio and Alanis-Lobato, Gregorio and Ravasi, Timothy},
+  journal={Scientific reports},
+  volume={3},
+  pages={1613},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+
+@article{van2011gaussian,
+  title={Gaussian interaction profile kernels for predicting drug--target interaction},
+  author={van Laarhoven, Twan and Nabuurs, Sander B and Marchiori, Elena},
+  journal={Bioinformatics},
+  volume={27},
+  number={21},
+  pages={3036--3043},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
+
+@article{lu2011link,
+  title={Link prediction in complex networks: A survey},
+  author={L{\"u}, Linyuan and Zhou, Tao},
+  journal={Physica A: statistical mechanics and its applications},
+  volume={390},
+  number={6},
+  pages={1150--1170},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@inproceedings{valverde2014link,
+  title={Link prediction in online social networks using group information},
+  author={Valverde-Rebaza, Jorge Carlos and de Andrade Lopes, Alneu},
+  booktitle={International Conference on Computational Science and Its Applications},
+  pages={31--45},
+  year={2014},
+  organization={Springer}
+}
+
+@article{wang2015link,
+  title={Link prediction in social networks: the state-of-the-art},
+  author={Wang, Peng and Xu, BaoWen and Wu, YuRong and Zhou, XiaoYu},
+  journal={Science China Information Sciences},
+  volume={58},
+  number={1},
+  pages={1--38},
+  year={2015},
+  publisher={Springer}
+}
+
+
+
+
+
+@article{lu2009similarity,
+  title={Similarity index based on local paths for link prediction of complex networks},
+  author={L{\"u}, Linyuan and Jin, Ci-Hang and Zhou, Tao},
+  journal={Physical Review E},
+  volume={80},
+  number={4},
+  pages={046122},
+  year={2009},
+  publisher={APS}
+}
+
+
+
+@article{liben2007link,
+  title={The link-prediction problem for social networks},
+  author={Liben-Nowell, David and Kleinberg, Jon},
+  journal={Journal of the American society for information science and technology},
+  volume={58},
+  number={7},
+  pages={1019--1031},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{zheng2013collaborative,
+  title={Collaborative matrix factorization with multiple similarities for predicting drug-target interactions},
+  author={Zheng, Xiaodong and Ding, Hao and Mamitsuka, Hiroshi and Zhu, Shanfeng},
+  booktitle={Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1025--1033},
+  year={2013},
+  organization={ACM}
+}
+
+
+@article{wang2018low,
+  title={Low rank constraint and spatial spectral total variation for hyperspectral image mixed denoising},
+  author={Wang, Qiang and Wu, Zhaojun and Jin, Jing and Wang, Tiancheng and Shen, Yi},
+  journal={Signal Processing},
+  volume={142},
+  pages={11--26},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{barrat2000properties,
+  title={On the properties of small-world network models},
+  author={Barrat, Alain and Weigt, Martin},
+  journal={The European Physical Journal B-Condensed Matter and Complex Systems},
+  volume={13},
+  number={3},
+  pages={547--560},
+  year={2000},
+  publisher={Springer}
+}
+
+
+
+@inproceedings{fokoue2016predicting,
+  title={Predicting drug-drug interactions through large-scale similarity-based link prediction},
+  author={Fokoue, Achille and Sadoghi, Mohammad and Hassanzadeh, Oktie and Zhang, Ping},
+  booktitle={European Semantic Web Conference},
+  pages={774--789},
+  year={2016},
+  organization={Springer}
+}
+
+
+
+@article{hanley1982meaning,
+  title={The meaning and use of the area under a receiver operating characteristic (ROC) curve.},
+  author={Hanley, James A and McNeil, Barbara J},
+  journal={Radiology},
+  volume={143},
+  number={1},
+  pages={29--36},
+  year={1982}
+}
+
+@phdthesis{刘宏鲲2011利用链路预测推断网络演化机制,
+  title={利用链路预测推断网络演化机制},
+  author={刘宏鲲 and 吕琳媛 and 周涛},
+  year={2011}
+}
+
+
+
+
+
+
+
+
+
+@article{gao2018link,
+  title={A link prediction algorithm based on low-rank matrix completion},
+  author={Gao, Man and Chen, Ling and Li, Bin and Liu, Wei},
+  journal={Applied Intelligence},
+  volume={48},
+  number={12},
+  pages={4531--4550},
+  year={2018},
+  publisher={Springer}
+}
+
+@inproceedings{davis2006relationship,
+  title={The relationship between Precision-Recall and ROC curves},
+  author={Davis, Jesse and Goadrich, Mark},
+  booktitle={Proceedings of the 23rd international conference on Machine learning},
+  pages={233--240},
+  year={2006},
+  organization={ACM}
 }
