--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \usepackage{amsmath}
 \usepackage{cases}
 \usepackage{multirow}
+\usepackage{array}
 % \usepackage{tocbibind}
 \usepackage{ulem}
 % \usepackage{subfigure}
