fix paper refs and update some formulas

--- a/nkthesis.bib
+++ b/nkthesis.bib
@@ -8,11 +8,28 @@
   year={2010}
 }
 
+@phdthesis{刘宏鲲2011利用链路预测推断网络演化机制,
+  title={利用链路预测推断网络演化机制},
+  author={刘宏鲲 and 吕琳媛 and 周涛},
+  year={2011}
+}
+
 @article{李淑玲2012基于相似性的链接预测方法研究,
   title={基于相似性的链接预测方法研究},
   author={李淑玲},
   journal={硕士论文, 哈尔滨工程大学, 哈尔滨},
   year={2012}
+}
+
+@article{wang2015link,
+  title={Link prediction in social networks: the state-of-the-art},
+  author={Wang, Peng and Xu, BaoWen and Wu, YuRong and Zhou, XiaoYu},
+  journal={Science China Information Sciences},
+  volume={58},
+  number={1},
+  pages={1--38},
+  year={2015},
+  publisher={Springer}
 }
 
 @article{wang2017novel,
@@ -57,6 +74,16 @@
   publisher={Public Library of Science}
 }
 
+@article{lu2009similarity,
+  title={Similarity index based on local paths for link prediction of complex networks},
+  author={L{\"u}, Linyuan and Jin, Ci-Hang and Zhou, Tao},
+  journal={Physical Review E},
+  volume={80},
+  number={4},
+  pages={046122},
+  year={2009},
+  publisher={APS}
+}
 
 @article{juurlink2003drug,
   title={Drug-drug interactions among elderly patients hospitalized for drug toxicity},
@@ -124,6 +151,16 @@
   publisher={IEEE}
 }
 
+@article{zhang2015label,
+  title={Label propagation prediction of drug-drug interactions based on clinical side effects},
+  author={Zhang, Ping and Wang, Fei and Hu, Jianying and Sorrentino, Robert},
+  journal={Scientific reports},
+  volume={5},
+  pages={12339},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
 @article{xu2016link,
   title={Link prediction based on path entropy},
   author={Xu, Zhongqi and Pu, Cunlai and Yang, Jian},
@@ -144,6 +181,13 @@
   organization={ACM}
 }
 
+@inproceedings{cao2018link,
+  title={Link prediction via subgraph embedding-based convex matrix completion},
+  author={Cao, Zhu and Wang, Linlin and de Melo, Gerard},
+  booktitle={Thirty-Second AAAI Conference on Artificial Intelligence},
+  year={2018}
+}
+
 @article{guimera2009missing,
   title={Missing and spurious interactions and the reconstruction of complex networks},
   author={Guimer{\`a}, Roger and Sales-Pardo, Marta},
@@ -156,56 +200,6 @@
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@article{ezzat2017drug,
-  title={Drug-target interaction prediction with graph regularized matrix factorization},
-  author={Ezzat, Ali and Zhao, Peilin and Wu, Min and Li, Xiao-Li and Kwoh, Chee-Keong},
-  journal={IEEE/ACM Transactions on Computational Biology and Bioinformatics (TCBB)},
-  volume={14},
-  number={3},
-  pages={646--656},
-  year={2017},
-  publisher={IEEE Computer Society Press}
-}
-
-@article{yang2015evaluating,
-  title={Evaluating link prediction methods},
-  author={Yang, Yang and Lichtenwalter, Ryan N and Chawla, Nitesh V},
-  journal={Knowledge and Information Systems},
-  volume={45},
-  number={3},
-  pages={751--782},
-  year={2015},
-  publisher={Springer}
-}
-
-@inproceedings{scellato2011exploiting,
-  title={Exploiting place features in link prediction on location-based social networks},
-  author={Scellato, Salvatore and Noulas, Anastasios and Mascolo, Cecilia},
-  booktitle={Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining},
-  pages={1046--1054},
-  year={2011},
-  organization={ACM}
-}
-
-
-
 @article{cannistraci2013link,
   title={From link-prediction in brain connectomes and protein interactomes to the local-community-paradigm in complex networks},
   author={Cannistraci, Carlo Vittorio and Alanis-Lobato, Gregorio and Ravasi, Timothy},
@@ -216,29 +210,6 @@
   publisher={Nature Publishing Group}
 }
 
-@article{van2011gaussian,
-  title={Gaussian interaction profile kernels for predicting drug--target interaction},
-  author={van Laarhoven, Twan and Nabuurs, Sander B and Marchiori, Elena},
-  journal={Bioinformatics},
-  volume={27},
-  number={21},
-  pages={3036--3043},
-  year={2011},
-  publisher={Oxford University Press}
-}
-
-
-@article{lu2011link,
-  title={Link prediction in complex networks: A survey},
-  author={L{\"u}, Linyuan and Zhou, Tao},
-  journal={Physica A: statistical mechanics and its applications},
-  volume={390},
-  number={6},
-  pages={1150--1170},
-  year={2011},
-  publisher={Elsevier}
-}
-
 @inproceedings{valverde2014link,
   title={Link prediction in online social networks using group information},
   author={Valverde-Rebaza, Jorge Carlos and de Andrade Lopes, Alneu},
@@ -246,65 +217,6 @@
   pages={31--45},
   year={2014},
   organization={Springer}
-}
-
-@article{wang2015link,
-  title={Link prediction in social networks: the state-of-the-art},
-  author={Wang, Peng and Xu, BaoWen and Wu, YuRong and Zhou, XiaoYu},
-  journal={Science China Information Sciences},
-  volume={58},
-  number={1},
-  pages={1--38},
-  year={2015},
-  publisher={Springer}
-}
-
-
-
-
-
-@article{lu2009similarity,
-  title={Similarity index based on local paths for link prediction of complex networks},
-  author={L{\"u}, Linyuan and Jin, Ci-Hang and Zhou, Tao},
-  journal={Physical Review E},
-  volume={80},
-  number={4},
-  pages={046122},
-  year={2009},
-  publisher={APS}
-}
-
-
-
-@article{liben2007link,
-  title={The link-prediction problem for social networks},
-  author={Liben-Nowell, David and Kleinberg, Jon},
-  journal={Journal of the American society for information science and technology},
-  volume={58},
-  number={7},
-  pages={1019--1031},
-  year={2007},
-  publisher={Wiley Online Library}
-}
-
-@inproceedings{zheng2013collaborative,
-  title={Collaborative matrix factorization with multiple similarities for predicting drug-target interactions},
-  author={Zheng, Xiaodong and Ding, Hao and Mamitsuka, Hiroshi and Zhu, Shanfeng},
-  booktitle={Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
-  pages={1025--1033},
-  year={2013},
-  organization={ACM}
-}
-
-
-@article{wang2018low,
-  title={Low rank constraint and spatial spectral total variation for hyperspectral image mixed denoising},
-  author={Wang, Qiang and Wu, Zhaojun and Jin, Jing and Wang, Tiancheng and Shen, Yi},
-  journal={Signal Processing},
-  volume={142},
-  pages={11--26},
-  year={2018},
-  publisher={Elsevier}
 }
 
 @article{barrat2000properties,
@@ -318,19 +230,6 @@
   publisher={Springer}
 }
 
-
-
-@inproceedings{fokoue2016predicting,
-  title={Predicting drug-drug interactions through large-scale similarity-based link prediction},
-  author={Fokoue, Achille and Sadoghi, Mohammad and Hassanzadeh, Oktie and Zhang, Ping},
-  booktitle={European Semantic Web Conference},
-  pages={774--789},
-  year={2016},
-  organization={Springer}
-}
-
-
-
 @article{hanley1982meaning,
   title={The meaning and use of the area under a receiver operating characteristic (ROC) curve.},
   author={Hanley, James A and McNeil, Barbara J},
@@ -341,29 +240,36 @@
   year={1982}
 }
 
-@phdthesis{刘宏鲲2011利用链路预测推断网络演化机制,
-  title={利用链路预测推断网络演化机制},
-  author={刘宏鲲 and 吕琳媛 and 周涛},
-  year={2011}
+@article{lu2011link,
+  title={Link prediction in complex networks: A survey},
+  author={L{\"u}, Linyuan and Zhou, Tao},
+  journal={Physica A: statistical mechanics and its applications},
+  volume={390},
+  number={6},
+  pages={1150--1170},
+  year={2011},
+  publisher={Elsevier}
 }
 
-
-
-
-
-
-
-
-
-@article{gao2018link,
-  title={A link prediction algorithm based on low-rank matrix completion},
-  author={Gao, Man and Chen, Ling and Li, Bin and Liu, Wei},
-  journal={Applied Intelligence},
-  volume={48},
-  number={12},
-  pages={4531--4550},
-  year={2018},
+@article{yang2015evaluating,
+  title={Evaluating link prediction methods},
+  author={Yang, Yang and Lichtenwalter, Ryan N and Chawla, Nitesh V},
+  journal={Knowledge and Information Systems},
+  volume={45},
+  number={3},
+  pages={751--782},
+  year={2015},
   publisher={Springer}
+}
+
+@article{demvsar2006statistical,
+  title={Statistical comparisons of classifiers over multiple data sets},
+  author={Dem{\v{s}}ar, Janez},
+  journal={Journal of Machine learning research},
+  volume={7},
+  number={Jan},
+  pages={1--30},
+  year={2006}
 }
 
 @inproceedings{davis2006relationship,
@@ -373,4 +279,15 @@
   pages={233--240},
   year={2006},
   organization={ACM}
+}
+
+@article{van2011gaussian,
+  title={Gaussian interaction profile kernels for predicting drug--target interaction},
+  author={van Laarhoven, Twan and Nabuurs, Sander B and Marchiori, Elena},
+  journal={Bioinformatics},
+  volume={27},
+  number={21},
+  pages={3036--3043},
+  year={2011},
+  publisher={Oxford University Press}
 }
