--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -9,4 +9,5 @@
 未来的工作也许可以从以下几点入手：
 第一，在研究网络聚集程度对算法性能的影响中，实验并不充分，得出“网络聚集程度越高，算法准确率越高”的结论还需要扩大对数据集聚类系数的选取范围，并增大数据量；
 第二，实验中未考虑数据集间噪声的不平衡性，日后可以从添加噪声和降噪这两个角度来平衡数据集间的噪声差异；
-第三，在所有评估算法性能的实验中，均为提及运行时间这一指标。事实上，受算法复杂性影响，CLML需要很长的运行时间，这一点和其它算法对比时是一个劣势，今后也许可以对运行效率做进一步优化。
+第三，在所有评估算法性能的实验中，均为提及运行时间这一指标。事实上，受算法复杂性影响，CLML需要很长的运行时间，
+这一点和其它算法对比时是一个劣势，今后也许可以对运行效率做进一步优化。
