Add formal Slides

--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -22,7 +22,7 @@
 \vspace{150pt}
 
 \begin{guanjianci}
-链接预测；流形学习；协同学习；实验设计
+\\ \ \ \ \ 链接预测；流形学习；协同学习；实验设计
 \end{guanjianci}
 
 
@@ -54,5 +54,5 @@ Finally, we loaded some real DDI data to test our method and found that it predi
 
 
 \begin{keywords}
-link prediction; manifold learning; collaborative learning; experimental design and analysis
+\\ link prediction; manifold learning; collaborative learning; experimental design and analysis
 \end{keywords} 
