Fix those god damn format issues

--- a/NKThesis.sty
+++ b/NKThesis.sty
@@ -450,7 +450,7 @@
      \sethead{}}
 \fi
 
-\def\headingfonts{\rmfamily\zihaowu}
+\def\headingfonts{\rmfamily\zihaoxiaowu}
 \def\thesisname{}
 
 \def\thefigure{\thechapter.\arabic{figure}}
@@ -587,9 +587,9 @@
 \def\chpaterheaderheight{16pt}
 
 \def\tocpartfonts{\rmfamily\zihaosi}
-\def\tocchapterfonts{\rmfamily\zihaosi}
-\def\tocsectionfonts{\rmfamily\zihaoxiaosi}
-\def\tocsubsectionfonts{\rmfamily\zihaowu}
+\def\tocchapterfonts{\rmfamily\zihaoxiaosan}
+\def\tocsectionfonts{\rmfamily\zihaosi}
+\def\tocsubsectionfonts{\rmfamily\zihaoxiaosi}
 \def\tocleaders{$\cdot\!\cdot\!\cdot\ $}
 \def\tocchapterindent{0em}
 \def\tocsectionindent{2em}
