--- a/main.tex
+++ b/main.tex
@@ -54,8 +54,8 @@
 	学院          = 软件学院,
 	系别          = 软件工程,
 	专业          = 软件工程,
-	完成日期      = 2019年5月1日,
-	指导教师       = 谢茂强 副教授,
+	完成日期      = 2019年5月26日,
+	指导教师       = 谢茂强\ 副教授,
 }
 
 
