--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -19,10 +19,10 @@
 \end{zhaiyao}
 
 
-\vspace{150pt}
+\vspace{20pt}
 
 \begin{guanjianci}
-\\ \ \ \ \ 链接预测；流形学习；协同学习；实验设计
+链接预测；流形学习；协同学习；实验设计
 \end{guanjianci}
 
 
@@ -50,9 +50,9 @@ Finally, we loaded some real DDI data to test our method and found that it predi
 \end{abstract}
 
 
-\vspace{100pt}
+\vspace{20pt}
 
 
 \begin{keywords}
-\\ link prediction; manifold learning; collaborative learning; experimental design and analysis
+link prediction; manifold learning; collaborative learning; experimental design and analysis
 \end{keywords} 
