--- a/tex/method.tex
+++ b/tex/method.tex
@@ -22,7 +22,7 @@
 
 \begin{center}
 \tablecaption{各符号释义}
-\begin{tabular}{l|l} \hline
+\begin{tabular}{ll} \hline
     符号 & 意义 \\ \hline
     $m$         & 目标矩阵的规模 \\
     $n$         & 辅助矩阵的规模 \\
