THE FINAL EDITION, add some materials, update some format errors and rewrite a complete fucking Word Edition..

--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,8 @@
 \NKTsetup{
 	% 封面设置
 	论文题目(中文) = 面向协同线性流形学习的实验设计与分析,
-	论文题目(英文) = Experimental Design and Analysis for Collaborative Linear Manifold Learning,
+	论文题目(英文) = Design and Analysis of Experiments on Collaborative Linear Manifold Learning,
+	% 论文题目(英文) = Experimental Design and Analysis for Collaborative Linear Manifold Learning,
 	学号           = 1511413,
 	姓名       = 陈齐翔,
 	年级          = 2015级,
