--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -8,14 +8,20 @@
 从中挖掘出有价值的信息帮助人们认识世界成为了一个重要课题，链接预测问题也由此产生。
 
 
-链接预测可以挖掘出网络中丢失的链接或进行网络动态分析，这在现如今有着广泛的应用，如用户推荐系统、致病基因挖掘、药物互作挖掘等。
-考虑到数据通常为嵌入在高维空间的低维流形结构，本文首先提出了一个基于线性流形学习的算法来预测网络中的链接。
-之后，文中又利用辅助信息构建了两个流形，令其通过协同学习的方式互相补全流型结构来弥补由数据稀疏带来的流型结构不完整的问题。
+链接预测可以挖掘出网络中丢失的链接或进行网络动态分析，是机器学习领域中的一个重要课题。
+随着相关研究的深入，人们对算法的需求愈加复杂，例如需要算法有对层次结构数据或带有辅助信息数据的处理能力，或是能使用序列化输入的方式训练模型。
+本文的研究目的之一就是如何有效利用辅助信息以提高模型的预测精度。
+由于现实数据的维度往往很高，直接使用时模型的训练成本较高，
+考虑到数据通常为嵌入在高维空间的低维流形结构，本文首先提出了一个基于线性流形学习的算法来解决高维数据的问题。
+在此基础上，本文又利用辅助信息，使用同样地方式构建了一个双流形结构，利用两个流形结构的一致性提出了一个双边协同学习算法。
+算法通过协同学习的方式令两个流型相互补全，成功利用辅助信息解决了由数据稀疏带来的流型结构不完整的问题。
 
 
-为了探究协同学习和流形学习的有效性，本文使用交叉验证和后续检验对多个算法做了对比，实验证明所提算法与其它算法相比的确有显著提升；
-为了进一步衡量算法性能、探究数据结构的特点与性能的关系，文中又设计了多个实验并做了解释分析；
-本文最后将该算法实际应用到了药物关联预测中并得到了令人满意的预测结果。
+此外，虽然近年来涌现了众多优秀的算法，但一个很常见的问题就是与算法相关的实验较匮乏，
+因此，本文的另一个研究目的就是从不同角度设计实验来检验算法性能和分析影响因素。
+为了检验算法性能，本文对算法做了交叉验证、鲁棒性检验、后续检验，并最终发现所提算法与其它算法相比，性能有显著提升；
+为了分析影响算法性能的因素，文中又从数据的结构上出发，设计了多个实验并做了解释分析；
+为了验证算法在实际应用中的有效性，文中最后将该算法应用到了对药物间关联的预测中并得到了令人满意的结果。
 \end{zhaiyao}
 
 
