--- a/tex/method.tex
+++ b/tex/method.tex
@@ -19,7 +19,7 @@
 \label{method:sec:notations}
 
 为了简化算法推导过程中对所用符号的解释并保持上下文符号一致性，本节总结了将要用到的所有重要符号并做了解释，各符号意义参见表\ref{method:table:notations}。
-
+\zihaowu
 \begin{center}
 \tablecaption{各符号释义}
 \begin{tabular}{ll} \hline
@@ -38,7 +38,7 @@
 \end{tabular}
 \label{method:table:notations}
 \end{center}
-
+\zihaoxiaosi
 
 目标矩阵就是我们要对其预测的矩阵，辅助矩阵就是算法中引入的辅助信息对应的矩阵，网络间关联矩阵就是这两各矩阵间的关系。
 如在DDI预测中，药物-药物关联矩阵就是目标矩阵，蛋白-蛋白关联矩阵就是辅助矩阵，药物-靶蛋白关联矩阵就是网络间关联矩阵。
@@ -156,7 +156,7 @@ L(D,\ T)=&\Arrowvert{RD-TR}\Arrowvert_F^2+\alpha\Arrowvert{W_1}\odot(T-T_0)\Arro
 通过协同学习的方式我们可以克服由于$R$矩阵数据稀疏导致重构后的结构不完整，两矩阵差异较大（仅50\%的相似度）的问题。
 实验发现，使用协同学习后$R_d$和$R_y$能达到接近98\%的相似度，这足以说明引入协同学习的必要性和算法的实际效果。
 
-\section{本章小节}
+\section{本章小结}
 本章首先介绍了一个基于线性流形学习的链接预测算法，算法利用原始数据构建了一个与关联矩阵结构类似的流形结构，利用二者结构的相似性对网络进行了链接预测。
 但受到数据稀疏性的影响，重构后的流形结构并不完整，实验后的效果难以达到预期。
 为此，我们又引入了辅助信息，利用辅助信息构建出了另一个与关联矩阵结构近似的流形结构。
